--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Apple SonarQube Plugin - Enables analysis of Swift and Objective-C projects into SonarQube.
-    Copyright © 2022 inside|app (${email})
+    SonarQube Apple Plugin - Enables analysis of Swift and Objective-C projects into SonarQube.
+    Copyright © 2022 inside|app (contact@insideapp.fr)
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Lesser General Public License as published by
@@ -245,8 +245,15 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <version>4.1</version>
                 <configuration>
+                    <licenseSets>
+                        <licenseSet>
+                            <header>com/mycila/maven/plugin/license/templates/LGPL-3.txt</header>
+                        </licenseSet>
+                    </licenseSets>
                     <properties>
-                        <license.years>${project.inceptionYear}</license.years>
+                        <owner>${license.owner}</owner>
+                        <email>${license.mailto}</email>
+                        <project.name>SonarQube Apple Plugin</project.name>
                     </properties>
                 </configuration>
             </plugin>
