--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
         <sslr.version>1.23</sslr.version>
         <sslr-squid-bridge.version>2.7.1.392</sslr-squid-bridge.version>
         <guava.version>17.0</guava.version>
+        <jproc.version>2.2.3</jproc.version>
 
         <junit.version>4.11</junit.version>
         <assertj.version>3.5.2</assertj.version>
@@ -140,6 +141,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.buildobjects</groupId>
+            <artifactId>jproc</artifactId>
+            <version>${jproc.version}</version>
         </dependency>
 
         <!-- Test dependencies -->
