--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,14 +8,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v1
+
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
     - name: Upload coverage to Codecov
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }} #required
+
+    - name: Read version
+        shell: bash
+        run: echo "version=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)" >> $GITHUB_ENV
+
+    - name: Upload snapshot release
+        if: github.ref == 'refs/heads/develop'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{github.workspace}}/sonar-apple-plugin/target/*.jar
+          tag: ${{env.version}}
+          overwrite: true
+          body: "Snapshot release"
+          file_glob: true
+          prerelease: true
