--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Analyze
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+      run: |
+        mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
         -Dsonar.login=$SONAR_TOKEN \
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.organization=insideapp-oss \
