--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Analyze
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
         -Dsonar.login=$SONAR_TOKEN \
