--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,8 @@
         <assertj.version>3.5.2</assertj.version>
         <mockito.version>4.4.0</mockito.version>
 
+        <sonar.exclusions>file:**/src/main/java/**/generated/**/*.java</sonar.exclusions>
+
     </properties>
 
     <dependencies>
@@ -217,7 +219,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>0.8.5</version>
                 <configuration>
                     <excludes>
                         <exclude>**/generated/**</exclude>
@@ -255,15 +257,6 @@
                         <email>${license.mailto}</email>
                         <project.name>SonarQube Apple Plugin</project.name>
                     </properties>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M6</version>
-                <configuration>
-                    <forkCount>0</forkCount>
                 </configuration>
             </plugin>
 
