--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -28,4 +28,12 @@
 
     <artifactId>commons</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.staxmate</groupId>
+            <artifactId>staxmate</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
