--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -29,11 +29,19 @@
     <artifactId>commons</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>com.fasterxml.staxmate</groupId>
             <artifactId>staxmate</artifactId>
             <version>2.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.10</version>
+        </dependency>
+
     </dependencies>
 
 </project>
