added MobSFScanSwiftReportParser, MobSFScanSwiftRulesDefinition and MobSFScanSwiftSensor updated ApplePlugin with MobSFScan updated SwiftProfile with MobSFScan

--- a/swift-lang/pom.xml
+++ b/swift-lang/pom.xml
@@ -36,6 +36,12 @@
             <version>0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
+
     </dependencies>
 
 </project>
