splitting to enable easier Objective-C addition

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -42,6 +42,12 @@
             <version>4.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
+
     </dependencies>
 
 </project>
