fix: release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,11 @@ name: Release
 
 on:
   push:
-    tags:
-      - *
+    branches:
+      - main
+  create:
+      tags:
+        - 0.*
 
 jobs:
   build:
