--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-12
 
     steps:
       - name: Checkout
@@ -22,6 +22,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
+
+      - name: Setup Xcode version
+        uses: maxim-lobanov/setup-xcode@v1.4.1
+        with:
+          xcode-version: '13.4.1'
 
       - name: Set version
         run: mvn versions:set -DnewVersion=$GIT_TAG_NAME
