--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -48,6 +48,13 @@
             <version>20220320</version>
         </dependency>
 
+        <!--  Jackson: Java to JSON conversion -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
