--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <sonar.apiVersion>7.9</sonar.apiVersion>
-        <sonar.sources>file:**/src/main/java,**/src/main/js</sonar.sources>
-        <sonar.tests>file:**/src/test/java</sonar.tests>
-        <sonar.exclusions>file:**/src/main/java/**/generated/**/*.java</sonar.exclusions>
+        <sonar.sources>src/main/java,src/main/js</sonar.sources>
 
         <apache-commons.version>2.6</apache-commons.version>
         <apache-commons-lang3.version>3.12.0</apache-commons-lang3.version>
@@ -108,6 +106,7 @@
         <assertj.version>3.22.0</assertj.version>
         <mockito.version>4.4.0</mockito.version>
 
+        <sonar.exclusions>file:**/src/main/java/**/generated/**/*.java</sonar.exclusions>
 
     </properties>
 
