Update the configuration of the changelog builder

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,10 @@ jobs:
       - name: Build Changelog
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v3
+        with:
+          configuration: ".github/configuration/changelog-builder.json"
+          ignorePreReleases: true
+          fetchReviewers: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
