Include only Java and Groovy files in license format

--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,10 @@
                     <licenseSets>
                         <licenseSet>
                             <header>com/mycila/maven/plugin/license/templates/LGPL-3.txt</header>
+                            <includes>
+                                <include>**/*.java</include>
+                                <include>**/*.groovy</include>
+                            </includes>
                         </licenseSet>
                     </licenseSets>
                     <properties>
