--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         xcode-version: '13.4.1'
 
+    - name: License Header Check
+      run: mvn license:check
+
     - name: Build
       run: mvn -B package --file pom.xml
 
