Add Xlint as compiler argument Remove Xlint warnings

--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,9 @@
                 <configuration>
                     <source>${jdk.min.version}</source>
                     <target>${jdk.min.version}</target>
+                    <compilerArgs>
+                        <arg>-Xlint</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
