--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,15 @@ jobs:
     runs-on: macos-12
 
     steps:
-    - name: Checkout
+    - name: Fetch main branch
+      uses: actions/checkout@v3
+      with:
+        ref: 'main'
+    - name: Fetch target branch
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+    - name: Checkout current branch
       uses: actions/checkout@v3
 
     - name: Set up JDK 1.11
