--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,10 @@ jobs:
     runs-on: macos-12
 
     steps:
-    - name: Fetch main branch
+    - name: Checkout
       uses: actions/checkout@v3
       with:
-        ref: 'main'
-    - name: Fetch target branch
-      uses: actions/checkout@v3
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
-    - name: Checkout current branch
-      uses: actions/checkout@v3
+        fetch-depth: 0
 
     - name: Set up JDK 1.11
       uses: actions/setup-java@v3
