--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,26 +8,26 @@ on:
 jobs:
   build:
 
-    runs-on: macos-12
+    runs-on: macos-14
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Retrieve tag name
-        uses: olegtarasov/get-tag@v2.1.2
+        uses: olegtarasov/get-tag@v2.1.3
         id: tag_name
 
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v3
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
 
       - name: Setup Xcode version
-        uses: maxim-lobanov/setup-xcode@v1.5.1
+        uses: maxim-lobanov/setup-xcode@v1.6.0
         with:
-          xcode-version: '13.4.1'
+          xcode-version: '15.2'
 
       - name: Set version
         run: mvn versions:set -DnewVersion=$GIT_TAG_NAME
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build Changelog
         id: build_changelog
-        uses: mikepenz/release-changelog-builder-action@v3
+        uses: mikepenz/release-changelog-builder-action@v4
         with:
           configuration: ".github/configuration/changelog-builder.json"
           ignorePreReleases: true
