--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-        -Dsonar.login=$SONAR_TOKEN \
+        -Dsonar.token=$SONAR_TOKEN \
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.organization=insideapp-oss \
         -Dsonar.projectKey=insideapp-oss_sonar-apple
