--- a/pom.xml
+++ b/pom.xml
@@ -88,33 +88,42 @@
         <license.mailto>contact@insideapp.fr</license.mailto>
 
         <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
-        <jdk.min.version>1.9</jdk.min.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <sonar.apiVersion>7.9</sonar.apiVersion>
+        <!-- we depend on API ${sonar.version} but we keep backward compatibility with LTS -->
+        <pluginApiMinVersion>9.9</pluginApiMinVersion>
+
+        <!-- versions -->
+        <sonar.api.version>10.5.0.2090</sonar.api.version>
+        <sonar.version>9.9.1.69595</sonar.version>
+        <sonar-analyzer-commons.version>2.7.0.1482</sonar-analyzer-commons.version>
+        <sslr.version>1.24.0.633</sslr.version>
+        <commons.io.version>2.15.1</commons.io.version>
+        <apache-commons-lang3.version>3.14.0</apache-commons-lang3.version>
+        <guava.version>33.1.0-jre</guava.version>
+        <jproc.version>2.8.2</jproc.version>
+        <junit.version>5.8.2</junit.version>
+        <assertj.version>3.25.3</assertj.version>
+        <mockito.version>5.11.0</mockito.version>
+
+        <!-- Advertise minimal required JRE version -->
+        <jre.min.version>11</jre.min.version>
+
+        <!-- JDK Build versions -->
+        <jdk.min.version>17</jdk.min.version>
+        <jdk.source.version>17</jdk.source.version>
+        <jdk.target.version>17</jdk.target.version>
+
         <sonar.sources>src/main/java,src/main/js</sonar.sources>
-
-        <apache-commons.version>2.6</apache-commons.version>
-        <apache-commons-lang3.version>3.12.0</apache-commons-lang3.version>
-        <analyzer-commons.version>1.24.0.965</analyzer-commons.version>
-        <sslr.version>1.23</sslr.version>
-        <sslr-squid-bridge.version>2.7.1.392</sslr-squid-bridge.version>
-        <guava.version>17.0</guava.version>
-        <jproc.version>2.8.0</jproc.version>
-
-        <junit.version>4.11</junit.version>
-        <assertj.version>3.22.0</assertj.version>
-        <mockito.version>4.4.0</mockito.version>
-
         <sonar.exclusions>file:**/src/main/java/**/generated/**/*.java</sonar.exclusions>
 
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.sonarsource.sonarqube</groupId>
+            <groupId>org.sonarsource.api.plugin</groupId>
             <artifactId>sonar-plugin-api</artifactId>
-            <version>${sonar.apiVersion}</version>
+            <version>${sonar.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -125,17 +134,17 @@
         <dependency>
             <groupId>org.sonarsource.analyzer-commons</groupId>
             <artifactId>sonar-analyzer-test-commons</artifactId>
-            <version>${analyzer-commons.version}</version>
+            <version>${sonar-analyzer-commons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sonarsource.analyzer-commons</groupId>
             <artifactId>sonar-analyzer-commons</artifactId>
-            <version>${analyzer-commons.version}</version>
+            <version>${sonar-analyzer-commons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sonarsource.analyzer-commons</groupId>
             <artifactId>sonar-xml-parsing</artifactId>
-            <version>${analyzer-commons.version}</version>
+            <version>${sonar-analyzer-commons.version}</version>
         </dependency>
 
         <dependency>
@@ -157,13 +166,19 @@
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.sonarsource.sonarqube</groupId>
-            <artifactId>sonar-testing-harness</artifactId>
-            <version>${sonar.apiVersion}</version>
+            <artifactId>sonar-plugin-api-impl</artifactId>
+            <version>${sonar.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.sonarsource.sonarqube</groupId>
+            <artifactId>sonar-testing-harness</artifactId>
+            <version>${sonar.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
@@ -182,7 +197,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${apache-commons.version}</version>
+            <version>${commons.io.version}</version>
         </dependency>
 
     </dependencies>
@@ -206,7 +221,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.8</version>
                 <configuration>
                     <excludes>
                         <exclude>**/generated/**</exclude>
