--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,10 @@
         <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <!-- we depend on API ${sonar.version} but we keep backward compatibility with LTS -->
-        <pluginApiMinVersion>9.9</pluginApiMinVersion>
-
         <!-- versions -->
-        <sonar.api.version>10.5.0.2090</sonar.api.version>
-        <sonar.version>9.9.1.69595</sonar.version>
+        <!-- see: https://github.com/SonarSource/sonar-plugin-api?tab=readme-ov-file#sonarqube -->
+        <sonar.api.version>9.14.0.375</sonar.api.version>
+        <sonar.version>9.9.0.65466</sonar.version>
         <sonar-analyzer-commons.version>2.7.0.1482</sonar-analyzer-commons.version>
         <sslr.version>1.24.0.633</sslr.version>
         <commons.io.version>2.15.1</commons.io.version>
